--- a/dashboards/Dutch-modality-exclusivity-norms/d.Rmd
+++ b/dashboards/Dutch-modality-exclusivity-norms/d.Rmd
@@ -492,7 +492,9 @@ Column {style="height:1300px; background-color:#FCFCFC;"}
 
 <div style = "padding-left: 60px; padding-right: 60px; padding-bottom:5px; text-align: justify; background-color: #FCFCFC;">
 
-<div style="text-align: center; font-size: 18px; padding-top: 31px; margin-top: 2px; margin-bottom: 0px;"> This is a reduced version of a dashboard. </div>
+<div style = "color: #308212; font-weight: bold; font-size: 18px; text-align: center; padding-top: 35px;"> Please allow a few seconds for loading. </div>
+
+<div style="text-align: center; font-size: 14px; padding-top: 10px; margin-top: 2px; margin-bottom: 0px;"> This is a reduced version of a dashboard. </div>
 
 <!-- Links -->
 <div style = "text-align: center; padding-top: 12px;">
