--- a/dashboards/Dutch-modality-exclusivity-norms/d.Rmd
+++ b/dashboards/Dutch-modality-exclusivity-norms/d.Rmd
@@ -1,6 +1,6 @@
 ---
 title: '&nbsp; &nbsp; Dutch modality exclusivity norms'
-author: '<a href="#section-info" style="color:#E4E5E8 !important; text-decoration:none !important; font-size:10px"> Bernabeu et al. (2017) </a>'
+author: '<a href="#section-info" style="color:#E4E5E8 !important; text-decoration:none !important; font-size:10px"> Bernabeu (2018) </a>'
 
 knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding) })
@@ -529,9 +529,9 @@ The norms, which are ratings of linguistic stimuli, served a twofold purpose: fi
 
 ### Definitions (as in Lynott & Connell, 2009, 2013)
 
-* Dominant modality: Highest-rated modality;
-* Modality exclusivity: Range of the three modality ratings divided by the sum;
-* Perceptual strength: Highest rating across modalities.
+* Dominant modality: highest-rated modality;
+* Modality exclusivity: range of the three modality ratings divided by the sum;
+* Perceptual strength: highest rating across modalities.
 
 
 ```{r out.width=500}
@@ -542,9 +542,10 @@ allNL$Range = floor(allNL$Exclusivity * 4)
 allNL$Range = mapvalues(allNL$Range, from = c(0, 1, 2, 3, 4),
                         to = c("0-20%", "20-40%", "40-60%", "60-80%", "80-100%"))
 
-allNL$cat = recode(allNL$cat, Concept = "Concepts", Property = "Properties")
+allNL$cat = dplyr::recode(allNL$cat, Concept = "Concepts", Property = "Properties")
 
 # Set order to display properties first, instead of alphabetical 'Concepts-Properties' order
+allNL$cat = as.factor(allNL$cat)
 allNL$cat = factor(allNL$cat, levels = rev(levels(allNL$cat)))
 
 ggplot(allNL) +
@@ -640,7 +641,7 @@ haptic_w = as.character(sort(eng_props[eng_props$English_Main_Lynott_Connell_200
 visual_w = as.character(sort(eng_props[eng_props$English_Main_Lynott_Connell_2009_2013=='Visual', 'English_Word_Lynott_Connell_2009_2013'])[1])
 w_set = c(auditory_w, haptic_w, visual_w)
 
-eng_props$English_Main_Lynott_Connell_2009_2013 = recode(eng_props$English_Main_Lynott_Connell_2009_2013, Auditory = "a", Haptic = "h", Visual = "v")
+eng_props$English_Main_Lynott_Connell_2009_2013 = dplyr::recode(eng_props$English_Main_Lynott_Connell_2009_2013, Auditory = "a", Haptic = "h", Visual = "v")
 
 Engprops = ggplot(eng_props,
                   aes(RC1, RC2, label = as.character(English_Main_Lynott_Connell_2009_2013))) + 
@@ -733,7 +734,7 @@ haptic_w = as.character(sort(eng_concs[eng_concs$English_Main_Lynott_Connell_200
 visual_w = as.character(sort(eng_concs[eng_concs$English_Main_Lynott_Connell_2009_2013=='Visual', 'English_Word_Lynott_Connell_2009_2013'])[1])
 w_set = c(auditory_w, haptic_w, visual_w)
 
-eng_concs$English_Main_Lynott_Connell_2009_2013 = recode(eng_concs$English_Main_Lynott_Connell_2009_2013, Auditory = "a", Haptic = "h", Visual = "v")
+eng_concs$English_Main_Lynott_Connell_2009_2013 = dplyr::recode(eng_concs$English_Main_Lynott_Connell_2009_2013, Auditory = "a", Haptic = "h", Visual = "v")
 
 Engconcs = ggplot(eng_concs,
                   aes(RC1, RC2, label = as.character(English_Main_Lynott_Connell_2009_2013))) +
@@ -830,7 +831,7 @@ haptic_w = as.character(sort(properties[properties$main=='Haptic', 'word'])[1])
 visual_w = as.character(sort(properties[properties$main=='Visual', 'word'])[1])
 w_set = c(auditory_w, haptic_w, visual_w)
 
-properties$main = recode(properties$main, Auditory = "a", Haptic = "h", Visual = "v")
+properties$main = dplyr::recode(properties$main, Auditory = "a", Haptic = "h", Visual = "v")
 
 NLprops = ggplot(properties,
                  aes(RC1, RC2, label = as.character(main))) +
@@ -925,7 +926,7 @@ haptic_w = as.character(sort(concepts[concepts$main=='Haptic', 'word'])[1])
 visual_w = as.character(sort(concepts[concepts$main=='Visual', 'word'])[1])
 w_set = c(auditory_w, haptic_w, visual_w)
 
-concepts$main = recode(concepts$main, Auditory = "a", Haptic = "h", Visual = "v")
+concepts$main = dplyr::recode(concepts$main, Auditory = "a", Haptic = "h", Visual = "v")
 
 NLconcs = ggplot(concepts,
                  aes(RC1, RC2, label = as.character(main))) +
@@ -978,12 +979,12 @@ All data and code are [available for re-use](https://osf.io/brkjw/wiki/home/){ta
 <!-- End two-column format -->
 </div>
 
-> <div style = "text-align: justify; text-indent:-1.5em; margin-left:1.5em; font-size: 16px; background-color: #FCFCFC; font-size: 15px;"> Bernabeu, P., Willems, R. M., & Louwerse, M. M. (2017). Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs [Data dashboard for modality exclusivity norms]. Retrieved from https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms/.</div>
+> <div style = "text-align: justify; text-indent:-1.5em; margin-left:1.5em; font-size: 16px; background-color: #FCFCFC; font-size: 15px;"> Bernabeu, P. (2018). Dutch modality exclusivity norms for 336 properties and 411 concepts [Data dashboard]. Retrieved from https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms/.</div>
 
 
 ### External corpora
 
-* Concreteness and age of acquisition: Norms by Brysbaert, Warriner, and Kuperman (2014);
+* Concreteness and age of acquisition: norms by Brysbaert, Warriner, and Kuperman (2014);
 * Phonological and orthographic neighbours: DutchPOND (Marian et al., 2012);
 * Word frequency and contextual diversity: SUBTLEX-NL (Keuleers, Brysbaert, & New, 2010);
 * Lemma frequency: CELEX (Baayen, Piepenbrock, & van Rijn, 1993).
@@ -3333,7 +3334,7 @@ results_total = rbind(results_total, results)
 
 
 
-# RESULTS: iconicity properties: 
+# Iconicity in properties
 # Auditory strength either was the strongest predictor or presented an opposite 
 # polarity from the main predictor. This held for all lexical DVs except age of 
 # acquisition.
@@ -4239,14 +4240,15 @@ names(results_total)
 results_total = results_total[, c(1:8, 13, 9:12, 14)]
 
 # Clarify variable names
-levels(results_total$Variable)[levels(results_total$Variable)=="properties_Dutch2$s_Auditory"] <- "Auditory"
-levels(results_total$Variable)[levels(results_total$Variable)=="properties_Dutch2$s_Haptic"] <- "Haptic"
-levels(results_total$Variable)[levels(results_total$Variable)=="properties_Dutch2$s_Visual"] <- "Visual"
-levels(results_total$Variable)[levels(results_total$Variable)=="concepts_Dutch2$s_Auditory"] <- "Auditory"
-levels(results_total$Variable)[levels(results_total$Variable)=="concepts_Dutch2$s_Haptic"] <- "Haptic"
-levels(results_total$Variable)[levels(results_total$Variable)=="concepts_Dutch2$s_Visual"] <- "Visual"
+results_total$Variable = dplyr::recode(results_total$Variable, 
+                                       `properties_Dutch2$s_Auditory` = 'Auditory',
+                                       `properties_Dutch2$s_Haptic` = 'Haptic',
+                                       `properties_Dutch2$s_Visual` = 'Visual',
+                                       `concepts_Dutch2$s_Auditory` = 'Auditory',
+                                       `concepts_Dutch2$s_Haptic` = 'Haptic',
+                                       `concepts_Dutch2$s_Visual` = 'Visual')
 
-# Results: Iconicity of concepts and comparison with properties: 
+# Iconicity in concepts and comparison with properties
 # The properties sample was characterized by smaller advantages for Auditory 
 # predictor, compared to the concepts sample. The tendency of either larger or 
 # opposite scores for the Auditory strength was less evident, even though it was 
