--- a/dashboards/Dutch-modality-exclusivity-norms/d.Rmd
+++ b/dashboards/Dutch-modality-exclusivity-norms/d.Rmd
@@ -269,7 +269,7 @@ $(document).ready(function(){
 
 <!-- Javascript function to add hyperlink to logo image -->
 <script>
-$('.navbar-logo').wrap('<a href="https://pablobernabeu.github.io/#data-dashboards">');
+$('.navbar-logo').wrap('<a href="https://pablobernabeu.github.io/#applications-and-dashboards">');
 </script>
 
 </head>
