--- a/2022/bayesian-workflow-prior-determination-predictive-checks-and-sensitivity-analyses/references.bib
+++ b/2022/bayesian-workflow-prior-determination-predictive-checks-and-sensitivity-analyses/references.bib
@@ -485,12 +485,12 @@
   langid = {english}
 }
 
-@book{nicenboim2023,
+@book{nicenboimInprep,
   title = {An Introduction to {{Bayesian}} Data Analysis for Cognitive Science},
   author = {Nicenboim, Bruno and Schad, DJ and Vasishth, Shravan},
-  date = {2023},
+  date = {in prep.},
   publisher = {{Chapman and Hall/CRC Statistics in the Social and Behavioral Sciences Series}},
-  location = {{London, IL}}
+  location = {{London, UK}}
 }
 
 @report{bernabeu2022a,
