--- a/publication/bernabeu-etal-2017/cite.bib
+++ b/publication/bernabeu-etal-2017/cite.bib
@@ -8,7 +8,7 @@
   pages = {1629--1634},
   publisher = {{Cognitive Science Society}},
   location = {{Austin, TX}},
-  url = {https://mindmodeling.org/cogsci2017/papers/0318},
+  url = {https://doi.org/10.31234/osf.io/a5pcz},
   abstract = {We tested whether conceptual processing is modality-specific by tracking the time course of the Conceptual Modality Switch effect. Forty-six participants verified the relation between property words and concept words. The conceptual modality of consecutive trials was manipulated in order to produce an Auditory-to-visual switch condition, a Haptic-to-visual switch condition, and a Visual-to-visual, no-switch condition. Event-Related Potentials (ERPs) were time-locked to the onset of the first word (property) in the target trials so as to measure the effect online and to avoid a within-trial confound. A switch effect was found, characterized by more negative ERP amplitudes for modality switches than no-switches. It proved significant in four typical time windows from 160 to 750 milliseconds post word onset, with greater strength in posterior brain regions, and after 350 milliseconds. These results suggest that conceptual processing may be modality-specific in certain tasks, but also that the early stage of processing is relatively amodal.},
   langid = {english}
 }
