--- a/publication/chen-etal-inprep/cite.bib
+++ b/publication/chen-etal-inprep/cite.bib
@@ -1,11 +1,14 @@
 
-@report{chenInvestigatingObjectOrientation2018,
-  title = {Investigating Object Orientation Effects across 14 Languages},
-  author = {Chen, Sau-Chin and Szabelska, Anna and Chartier, Christopher R. and Kekecs, Zoltan and Lynott, Dermot and Bernabeu, P. and Jones, Benedict C. and DeBruine, Lisa and Levitan, Carmel and Werner, Kaitlyn M. and Wang, Kelly and Milyavskaya, Marina and Musser, Erica D. and Papadatou-Pastou, Marietta and Coles, Nicholas A. and Janssen, Steve and Ozdogru, Asil and Storage, Daniel and Manley, Harry and Brown, Benjamin T. and Barzykowski, Krystian and Evans, Thomas Rhys and Oberzaucher, Elisabeth and Li, Manyu and Vaughn, Leigh Ann and Aczel, Balazs and Szuts, Attila and Batres, Carlota and Chopik, William J. and Peters, Kim Olivia and Olsen, Jerome and Voracek, Martin and Tamnes, Christian K. and Sirota, Miroslav and Holford, Dawn Liu and Williams, Glenn Patrick and Parganiha, Arti and Pande, Babita and Pradhan, Sraddha and Parveen, Noorshama and Kujur, Pratibha and Chandel, Priyanka and Singh, Margaret Messiah and Tan, Chrystalle B. Y. and Protzko, John and Arnal, Jack and Stieger, Stefan and Liuzza, Marco Tullio and Kačmár, Pavol and Bavolar, Jozef and Baník, Gabriel and Adamkovic, Matus and Ropovik, Ivan and Babincak, Peter and Seehuus, Martin and Kovic, Vanja and Schmidt, Kathleen},
-  date = {2018-11-01T11:29:06},
-  institution = {{PsyArXiv}},
-  doi = {10.31234/osf.io/t2pjv},
-  url = {https://doi.org/10.31234/osf.io/t2pjv},
-  urldate = {2022-06-11},
-  abstract = {Mental simulation theories of language comprehension propose that people automatically create mental representations of real objects. Evidence from sentence-picture verification tasks has shown that people mentally represent various visual properties such as shape, color, and size. However, the evidence for mental simulations of object orientation is limited. We report a study that investigates the match advantage of object orientation across speakers of different languages. This multi-laboratory project aims to achieve two objectives. First, we examine the replicability of the match advantage of object orientation across multiple languages and laboratories. Second, we will use a mental rotation task to measure participants’ mental imagery after the sentence-picture verification task. The relationship between the participants’ performance of the two tasks will provide a cross-linguistic examination of perceptual simulation processes. With the (broad) evaluation of individual mental imagery ability and potential linguistic moderators, we expect a robust estimation of match advantage of object orientation.}
+@misc{chen_investigating_2023,
+	title = {Investigating object orientation effects across 18 languages},
+	url = {https://osf.io/2qf6w/},
+	doi = {10.31219/osf.io/2qf6w},
+	abstract = {Mental simulation theories of language comprehension propose that people automatically create mental representations of objects mentioned in sentences. Mental representation is often measured with the sentence-picture verification task, wherein participants first read a sentence that implies the object property (i.e., shape and orientation). Participants then respond to an image of an object by indicating whether it was an object from the sentence or not. Previous studies have shown matching advantages for shape, but findings concerning object orientation have not been robust across languages. This registered report investigated the match advantage of object orientation across 18 languages in nearly 4,000 participants. The preregistered analysis revealed no compelling evidence for a match advantage across languages. Additionally, the match advantage was not predicted by mental rotation scores. Overall, the results did not support current mental simulation theories.},
+	publisher = {{OSF} Preprints},
+	author = {Chen, Sau-Chin and Buchanan, Erin Michelle and Kekecs, Zoltan and Miller, Jeremy K. and Szabelska, Anna and Aczel, Balazs and Bernabeu, Pablo and Forscher, Patrick S. and Szuts, Attila and Vally, Dr Zahir and Al-Hoorie, Ali H. and Helmy, Mai and Silva, Caio Santos Alves da and Silva, Luana Oliveira da and Moraes, Yago Luksevicius de and Hsu, Rafael Ming Chi Santos and Mafra, Anthonieta Looman and Valentova, Jaroslava Varella and Varella, Marco Antonio Correa and Dixson, Barnaby and Peters, Kim Olivia and Steffens, Niklas K. and Ghasemi, Omid and Roberts, Andrew and Ross, Robert M. and Stephen, Ian and Milyavskaya, Marina and Wang, Kelly and Werner, Kaitlyn M. and Holford, Dawn Liu and Sirota, Miroslav and Evans, Thomas Rhys and Lynott, Dermot and Lane, Bethany M. and Riis, Danny and Williams, Glenn Patrick and Tan, Chrystalle B. Y. and Foo, Alicia and Janssen, Steve M. J. and Arinze, Nwadiogo Chisom and Ndukaihe, Izuchukwu and Moreau, David and Jurosic, Brianna and Leach, Brynna and Lewis, Savannah C. and Mallik, Peter and Schmidt, Kathleen and Chopik, William J. and Vaughn, Leigh Ann and Li, Manyu and Levitan, Carmel and Storage, Daniel and Batres, Carlota and Enachescu, Janina and Olsen, Jerome and Voracek, Martin and Lamm, Claus and Pronizius, Ekaterina and Ripp, Tilli and Röer, Jan Philipp and Schnepper, Roxane and Papadatou-Pastou, Marietta and Mokady, Aviv and Reggev, Niv and Chandel, Priyanka and Kujur, Pratibha and Pande, Babita and Parganiha, Arti and Parveen, Noorshama and Pradhan, Sraddha and Singh, Margaret Messiah and Korbmacher, Max and Kunst, Jonas R. and Tamnes, Christian K. and Woelfert, Frederike and Klevjer, Kristoffer and Martiny, Sarah E. and Pfuhl, Gerit and Adamus, Sylwia and Barzykowski, Krystian and Filip, Katarzyna and Arriaga, Patricia and Gvozdenović, Vasilije and Kovic, Vanja and Gan, Tao-Tao and Liu, Qing-Lan and Chen, Zhong and Gao, Fei and Li, Lisa and Bavolar, Jozef and Hricova, Monika and Kačmár, Pavol and Adamkovic, Matus and Babincak, Peter and Baník, Gabriel and Ropovik, Ivan and Ricaurte, Danilo Zambrano and Solas, Sara Álvarez and Manley, Harry and Suavansri, Panita and Kung, Chun-Chia and Ozdogru, Asil and Solak, Çağlar and Söylemez, Sinem and Çoksan, Sami and Dalgar, Ilker and Elsherif, Mahmoud and Vasileva, Martina and Mlakic, Vinka and Oberzaucher, Elisabeth and Stieger, Stefan and Volsa, Selina and Zickfeld, Janis and Chartier, Christopher R.},
+	urldate = {2023-06-25},
+	date = {2023-05-31},
+	langid = {english},
+	keywords = {big team, Cognition and Perception, Cognitive Psychology, cross-lingual research, language comprehension, mental rotation, mental simulation, psa, psychological science accelerator, Psychology, Social and Behavioral Sciences},
+	file = {Full Text PDF:C\:\\Users\\pbe044\\Zotero\\storage\\X6MCJA35\\Chen et al. - 2023 - Investigating Object Orientation Effects Across 18.pdf:application/pdf},
 }
